--- a/Readme.org
+++ b/Readme.org
@@ -13,6 +13,7 @@
     - [[none (keyword)]]
     - [[:require keyword]]
     - [[:ensure keyword]]
+    - [[:defaults keyword]]
   - [[Configuration keywords]]
     - [[:init keyword]]
     - [[:commands keywards]]
@@ -162,6 +163,20 @@ but it's easy to create other package manager's backend.
 
 Of course, setting and requiring of the backend itself must be
 completed before using ~:ensure~ keyword.
+
+*** :defaults keyword
+~:defalts~ provide to download default settings for specified package.
+For more detail, see [[https://github.com/conao3/leaf-defaults.git][leaf-defaults]].
+#+BEGIN_SRC emacs-lisp
+  (cort-deftest leaf-test/:simple-defaults
+    (match-expansion-let ((leaf-backend/:ensure 'package))
+     (leaf foo :ensure t :defaults t)
+     '(progn
+        (funcall #'leaf-backend/:ensure-package 'foo 'foo)
+        (feather-install-defaults 'foo)
+        (progn
+          (require 'foo)))))
+#+END_SRC
 ** Configuration keywords
 *** :init keyword
 ~:init~ keyword expect sexp will be evaluated before ~require~ package.
