--- a/Readme.org
+++ b/Readme.org
@@ -147,8 +147,8 @@ If give multiple values it ~require~ each package.
        :require foo-hoge foo-piyo
        :config (setq bar 'baz))
      '(progn
-        (require foo-hoge)
-        (require foo-piyo)
+        (require 'foo-hoge)
+        (require 'foo-piyo)
         (setq bar 'baz))))
 #+end_src
 
@@ -509,8 +509,8 @@ completed before using ~:ensure~ keyword.
           (setq bar1 'baz)
           (setq bar2 'baz))
         (progn
-          (require foo-hoge)
-          (require foo-piyo)
+          (require 'foo-hoge)
+          (require 'foo-piyo)
           (setq bar3 'baz)
           (setq bar4 'baz)))))
 #+END_SRC
@@ -773,8 +773,8 @@ Example:
      (leaf foo
        :require h s :message-post-require "foo!" :config (setq bar 'baz))
      '(progn
-        (require h)
-        (require s)
+        (require 'h)
+        (require 's)
         (message "foo!")
         (setq bar 'baz))))
 
@@ -788,8 +788,8 @@ Example:
        :message-pre-require "pre")
      '(progn
         (message "pre")
-        (require h)
-        (require s)
+        (require 'h)
+        (require 's)
         (message "foo!")
         (message "post!")
         (setq bar 'baz))))
@@ -802,8 +802,8 @@ Example:
        :tmp-post (setq foo 'bar)
        :tmp-pre (message "really start tmp!"))
      '(progn
-        (require h)
-        (require s)
+        (require 'h)
+        (require 's)
         (message "start tmp")
         (message "really start tmp!")
         (setq foo 'bar))))
